update sdk to 2.13.17

--- a/FinApplet.framework/not_domain.html
+++ b/FinApplet.framework/not_domain.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>非业务域名</title>
+    <title>非备案的域名</title>
     <style>
         body{
             text-align: center;
@@ -19,7 +19,7 @@
         无法打开<span id="mininame"></span>
     </div>
     <div style="color: #828282;padding: 0 15px;">
-        不支持打开非业务域名<span id="wvurl"></span>，请重新配置。
+        不支持打开非备案的域名<span id="wvurl"></span>，请重新配置。
     </div>
 </body>
 
