--- a/FinApplet.framework/FinApplet.bundle/finclip_error_tip.html
+++ b/FinApplet.framework/FinApplet.bundle/finclip_error_tip.html
@@ -58,7 +58,7 @@
       subscription = '当前访问的域名已被运营端放入黑名单'
       break;
     case 2: 
-      pageTitle = '页面不存在  '
+      pageTitle = '页面不存在	'
       title = '无法打开页面'
       subscription = '该页面不存在，请与小程序开发者联系'
       break
@@ -68,8 +68,8 @@
 
   if(type !== 0) {
     document.title = pageTitle
-    titleElem.innerHTML = title
-    subscriptionElem.innerHTML = subscription
+    titleElem.innerText = title
+    subscriptionElem.innerText = subscription
   }
 </script>
 <script>
@@ -155,7 +155,7 @@ window.FinChatJSBridge.invoke('initPage', {}, (pageId) => {
             wvurl = wvurl.substring(0,idx2)
           }
         }
-        document.getElementById('wvurl').innerHTML = wvurl.replace(/<script>/g,"").replace(/<\/script>/g,"")
+        document.getElementById('wvurl').innerText = wvurl.replace(/<script>/g,"").replace(/<\/script>/g,"")
     });
 });
 
